# NoteSharingApp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  server.key
client_data/thong/data/: thong.priv
client_data/ttt/data/: ttt.priv
client_data/ttt/downloads/: a.docx
docs/: code_structure.md  flow.md  library_requirement.md  plan.md
project_02_source/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  server.crt  server.key
project_02_source/include/client/: ClientApp.h
project_02_source/include/common/: Protocol.h
project_02_source/include/crypto/: CryptoManager.h
project_02_source/include/server/: AuthManager.h  NoteManager.h  Server.h
project_02_source/project_02_test/: crypto_test.cpp  server_logic_test.cpp  test_auth.cpp
project_02_source/src/client/: ClientApp.cpp  main_client.cpp
project_02_source/src/crypto/: CryptoManager.cpp
project_02_source/src/server/: AuthManager.cpp  NoteManager.cpp  Server.cpp  main_server.cpp
project_02_test/: crypto_test.cpp  test_access_control.cpp  test_crypto.cpp  test_integration_e2ee.cpp
server_data/notes/: 4Rldt3zrQ5uL.json
server_data/shares/: YNx6XjJ7WAI3.json
server_data/user/: thong.json  ttt.json
